# chat-backend

./: .gitignore  README.md  init_db.py  main.py  migrate_db.py  migrate_images.py  pyproject.toml  simple_migrate.py
app/: main.py
app/api/: auth.py  friend.py  message.py  upload.py  user.py  user_status.py  ws_chat.py
app/core/: database.py  security.py  user_status.py
app/models/: friend.py  message.py  user.py
app/schemas/: friend.py  message.py  user.py  user_status.py
